# fire-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  readme.MD
.cache/clangd/index/: application.cpp.37787BD080B06DDF.idx  application.hpp.A7FBA484F95268FE.idx  assertion.cpp.E59804A23E0C6173.idx  assertion.hpp.5E7F1FAC10B33C18.idx  asset_loader.cpp.3FB1FADB6292769C.idx  asset_loader.hpp.6DEADE219FE923F5.idx  batch_renderer.cpp.454308A5FA04A5F5.idx  batch_renderer.hpp.9FDF32B9E03A0D65.idx  bullet.cpp.211DE0F5B7081631.idx  bullet.hpp.7206C1366A8A66D3.idx  camera.cpp.6BE9500CF3D2E84E.idx  camera.hpp.1D4EC186EC324AF5.idx  debug_ui.cpp.097220F4C00CF266.idx  debug_ui.hpp.7D0ABFC885117320.idx  element_array_buffer.cpp.3E54B4C944A6B64C.idx  element_array_buffer.hpp.C2D3E24835A3DFEF.idx  error.cpp.0ABDE33130F4540B.idx  error.hpp.09367D664D52C320.idx  error_check.cpp.E7B3FAE8C184081E.idx  error_check.hpp.5F8FDB68CCC7EE5A.idx  game_application.cpp.05F34EAC1D60BA6B.idx  game_application.hpp.F6AD02159E8B9109.idx  game_object.cpp.B01C9DF726D766FE.idx  game_object.hpp.BB113E6ED1949230.idx  game_scene.cpp.59AAB2B4DAD3AA6F.idx  game_scene.hpp.E32B1F0857090C8D.idx  glad.c.B400BBCD7E3E0EB8.idx  glad.h.6ECE2A206FAED4F7.idx  imconfig.h.6C32B43C6D53E3AB.idx  imgui.cpp.1DCB838EC3DA20BC.idx  imgui.h.8147206117FC5B2F.idx  imgui_demo.cpp.65C1D715475CE43B.idx  imgui_draw.cpp.F7DCA339F40B815B.idx  imgui_impl_glfw.cpp.DA96F3E3C5472E8E.idx  imgui_impl_glfw.h.29A78C321BE01EC9.idx  imgui_impl_opengl3.cpp.7E43B18A56281CAF.idx  imgui_impl_opengl3.h.ECE46591A6834834.idx  imgui_impl_opengl3_loader.h.FA286C484360BE70.idx  imgui_internal.h.251900F156F7AE2A.idx  imgui_tables.cpp.AACF30CDB7B97F69.idx  (+49 more)
core/: CMakeLists.txt  application.cpp  application.hpp  asset_loader.cpp  asset_loader.hpp  camera.hpp  scene_manager.cpp
core/src/: application.cpp  camera.cpp  camera.hpp  game_object.cpp  game_object.hpp  input.hpp  random.cpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp  window.cpp  window.hpp
game/: CMakeLists.txt  main.cpp
game/src/: bullet.cpp  game_application.cpp  game_application.hpp  game_scene.cpp  game_scene.hpp  ship.cpp  ship.hpp  star.cpp
game_3d/: CMakeLists.txt  main.cpp
game_3d/src/: custom_3d_camera.cpp  custom_3d_camera.hpp  game_application_3d.cpp  game_application_3d.hpp  game_scene_3d.cpp  game_scene_3d.hpp
rendering/: CMakeLists.txt  batch_renderer.cpp  element_array_buffer.hpp  error.cpp  error_check.hpp  quad.hpp  renderer.cpp  shader_program.cpp  shader_program.hpp  texture.hpp  vertex_array_buffer.cpp
rendering/resources/: mesh_fragment_shader.glsl  mesh_vertex_shader.glsl  quad_vertex_shader.glsl
rendering/src/: batch_renderer.cpp  batch_renderer.hpp  camera.cpp  camera.hpp  element_array_buffer.cpp  error_check.cpp  mesh.cpp  mesh.hpp  renderer.hpp  resource_loader.cpp  resource_loader.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  sprite_sheet.cpp  texture_region.cpp  texture_storage.cpp  texture_storage.hpp  transform_3d.hpp  vertex_buffer.cpp
resources/: frag.glsl  quad_fragment_shader.glsl  quad_vertex_shader.glsl  test.lua  vert.glsl
src/: 2d_old_main.cpp  3d_main.cpp  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  application.hpp  assertion.cpp  assertion.h  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  debug_ui.cpp  debug_ui.h  debug_ui.hpp  defines.h  error.cpp  game_object.cpp  game_object.h  game_object.hpp  input.cpp  input.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera.hpp  random.cpp  random.h  random.hpp  scene.cpp  scene.h  scene.hpp  scene_manager.cpp  scene_manager.h  scene_manager.hpp  script.cpp  script.h  sprite.cpp  sprite.h  sprite.hpp  window.cpp  window.h
src/game/: CMakeLists.txt  bullet.cpp  bullet.hpp  game_application.cpp  game_application.h  game_scene.cpp  game_scene.h  game_scene.hpp  ship.cpp  ship.h  ship.hpp  star.cpp  star.h  star.hpp
src/rendering/: CMakeLists.txt  assertion.cpp  assertion.h  assertion.hpp  batch_renderer.cpp  batch_renderer.h  batch_renderer.hpp  cube_mesh_data.h  element_array_buffer.cpp  element_array_buffer.h  error.cpp  error.h  error.hpp  error_check.cpp  error_check.h  mesh.cpp  mesh.h  quad.h  quad_vertex.h  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  shader_program.cpp  shader_program.h  sprite.h  sprite_sheet.cpp  sprite_sheet.h  sprite_sheet.hpp  texture.cpp  texture.h  texture.hpp  texture_data.h  texture_data.hpp  texture_region.cpp  texture_region.h  texture_region.hpp  texture_storage.cpp  (+10 more)
